Update pandoc to latest, fix PDF layout issues, release with gh CLI

--- a/assets/manual/pdf.css
+++ b/assets/manual/pdf.css
@@ -83,6 +83,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
-#installing-or-building-surge-xt, #the-scene-concept, #patch-browser, #the-save-dialog, #sound-generation, #sound-shaping, #waveshaper, #modulation-list, #effect-unit-selector, #shape, #tuning-editor, #edit-modes, #radial, #interval, #to-equal, #rotation {
+#the-scene-concept, #sliders-and-controls, #undo-and-redo, #patch-browser, #status-area, #sound-generation, #sound-shaping, #modulation-list, #effect-unit-selector, #shapes, #multi-segment-envelope-generator, #formula, #tuning-editor, #edit-modes, #radial, #interval, #to-equal, #rotation {
   page-break-before: always;
 }
